# ChangeLog for app-crypt/tinyca
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-crypt/tinyca/ChangeLog,v 1.22 2013/07/04 12:18:41 ago Exp $

  04 Jul 2013; Agostino Sarubbo <ago@gentoo.org> tinyca-2.0.7.5-r1.ebuild:
  Stable for x86, wrt bug #470300

  05 Jun 2013; Alon Bar-Lev <alonbl@gentoo.org> tinyca-2.0.7.5-r1.ebuild:
  make->emake per bug#470300, thanks to nimiux

  04 Jun 2013; Chema Alonso <nimiux@gentoo.org> tinyca-2.0.7.5-r1.ebuild:
  Stable for amd64 wrt bug #470300

*tinyca-2.0.7.5-r1 (12 Mar 2013)

  12 Mar 2013; Alon Bar-Lev <alonbl@gentoo.org>
  +files/tinyca-2.0.7.5-openssl-1.patch, +tinyca-2.0.7.5-r1.ebuild:
  Solve openssl-1.0 compatibility, per bug#460270, thanks to Per Pomsel

  18 Sep 2012; Tim Harder <radhermit@gentoo.org> metadata.xml:
  Remove redundant maintainer from metadata.

  20 Nov 2009; Markus Meier <maekke@gentoo.org> tinyca-2.0.7.5.ebuild:
  amd64 stable, bug #284941

  20 Nov 2009; Christian Faulhammer <fauli@gentoo.org>
  tinyca-2.0.7.5.ebuild:
  stable x86, bug 284941

*tinyca-2.0.7.5 (12 Jan 2007)

  12 Jan 2007; Alon Bar-Lev <alonbl@gentoo.org> +tinyca-2.0.7.5.ebuild:
  Version bump, bug#161712

  21 Dec 2006; Saleem Abdulrasool <compnerd@gentoo.org>
  -tinyca-0.5.4-r1.ebuild:
  gnome-1.x removal

*tinyca-2.0.7.3 (02 Jun 2006)

  02 Jun 2006; Daniel Black <dragonheart@gentoo.org>
  -files/tinyca-2.0.7.2-compositefix.patch,
  +files/tinyca-2.0.7.3-compositefix.patch, -tinyca-0.6.7.ebuild,
  -tinyca-2.0.7.0.ebuild, -tinyca-2.0.7.1.ebuild, -tinyca-2.0.7.2.ebuild,
  +tinyca-2.0.7.3.ebuild:
  version bump