@@ -1,29 +1,18 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 AUX tinyca-2.0.7.3-compositefix.patch 324 SHA256 d69a311312c46d9b3a0db9464f73d3c0dd1aa303aca0309fc8bfe09af2b9f48e SHA512 0411e13f8a40e60e2b2fa6b095745e465f406da38e7ae5aa1e84e0cd325d012e3bb8aa397f2bd5b6ef2efb8624ae0d4f5dd59f73a562e387856ade211385bc5a WHIRLPOOL 82699af6773096960c4413f6fa7e2402355df74d54965be68dbe0ac65d2f9408b0699789688bab10123918b7e44c2142cfad962d61f4465d8017b891a1b860c4
 AUX tinyca-2.0.7.5-openssl-1.patch 1473 SHA256 47e0944ad8b8f01fa9f74b5b91d68c1afb90c19df173d28d117843f0815f7135 SHA512 62f6368d8759f83b33aa8d19cbd0b816bc2be35a1b1f798b211269a5b0279788edd01f7f4bdf20d453dafc71df250c72adbd9ac5dba276ac1b4f0690fa80c60a WHIRLPOOL 567f9793fd606faef9c86e05b55e9a606a5e5b8415602e212cbccc6f70192256a08b432f70dc296044054ad2a844418e52dc46e26407a89b6525ceb849afebea
-DIST tinyca2-0.7.3.tar.bz2 146531 SHA256 0c54163f7740486c1d4370803270e4dd12946dd58ed7c8b183e6f21da639b987 SHA512 a38c11ce17e3e3b90f39bda408b5a6aa0ccaa2baf87e6a01d1133e8f32e0b7b06db958754b5e3c8c636782180c1f449b83bedec5ec111f65e9e8d2542dbfd0ff WHIRLPOOL dc263a92f5c1dfd421a4783caeafed5dd9166877fb2f96deafa03b65903a06b098473b2b6e28b6971a182fd1a148a3a327aaa549cca27d564772b2be57e29b28
+AUX tinyca-2.0.7.5-perl-5.18.patch 1743 SHA256 72157afe6876d861763357fcd2845fee2ab94e7b280ea8d4b4e7dd7d92b189e4 SHA512 8d31c6fc3df702f03365352a4de3ee91efd5f4c2b002e9a29827a943f90fcbfefa67518df6e1ce1cb064ad1b44d575ae105013e30babdd723521a9950602a0dc WHIRLPOOL 7dc95dd5b42a6937e8eb260a440f157285f016dfa8bfa785f00da78521adef2a18ffa62ec3417c5a0681638d0ddd0d2b51794675b999ca14e2ddf818330f7f1c
 DIST tinyca2-0.7.5.tar.bz2 172779 SHA256 dc7d8180bf1db572fa4b08e15ecf8a47fc1c5bfdb55109bf2b3a54f86e5e60b7 SHA512 47df0b995715ad973b12da7d2999ae90f8887549437235b287e1d294331adc8d527bf4435ce1c30df278db8e5f8fc7df29a35d3650d41bfd4d0a0a7c193994aa WHIRLPOOL 5f990529ee503f07d8df0132c1b5834b8353d4908650535adb67ba82f04b1472559dca40ee972e4ce6ac22f31706774c981fc8fc905964df4b837ba6bec1a9be
-EBUILD tinyca-2.0.7.3.ebuild 1478 SHA256 ec17fb8c9bce920b7d3b589c1bcc35b1c038fa7a734e96226c9737256415c16b SHA512 f4fd98b89ba01c5c0dda2956a052562452959d755a375e5686f3a9f69cdc7345f3a474fa102d432941fa20c45ad83ceb710823925ef58da6ad169eccb3289a64 WHIRLPOOL 3ae2e60b96044664fd12d509724c075b9a0ad781c8148aad3b3891cc9b210bf4d2482a747140cf064c0e05559e2e6b5daed7ef9a8727ed532c5bea377d0d77ae
 EBUILD tinyca-2.0.7.5-r1.ebuild 1611 SHA256 e4431fbb13432c3f2d432feb8998d42e220bc3d05653e529cd3526587be514e2 SHA512 4f589d2db2be666480b83a5acfb8012114c4eea0f034fbeff2d3988baebc87e059388e9c4a1f3212415c7f6dfc75f1dfc4f732928a22f63034a473136e002d53 WHIRLPOOL b405196ff5232481c4aa047abce8aa537d1c3fcbb6918c89842bef9ca03d879c0069b6aa327e99552216ca7380d066b0e46b5e22c3b488fd7e873f27903786e6
-EBUILD tinyca-2.0.7.5.ebuild 1560 SHA256 31775d6d1d3aeee5767a636b846b27c816519fbc6b2b02e535f37e73b89ffb42 SHA512 ba94f610daa5b0aca660693f1059715eed27ca0d9a2f67262c2937f2470242e105df65e67cf00fa052a1d9076f1b072302a728ed9f5e3ab0c7140b4d54fd9a91 WHIRLPOOL 649d49f1d3c12a2c57e04b32e90242fc3742c1affce8f31264652c6f0c7dedfc2661069b02cc002f3e295fb600b6ab7fa40984f25e69e7ebecbfcdc23d9fdbc9
-MISC ChangeLog 1627 SHA256 70fe26de48ecf6281d66c9f08387ca51923c5fb3c60b1e970ebf87b565d9e1ba SHA512 7cbb06f1adb2d42c1688fca9b36ad7478857fb6a8e8eb42602295c2df05ab4245e07bb51682b5c26fff4457516a0ab5d5310b81185843b80719b1965699ffa32 WHIRLPOOL 228d447835fbb789608e62a52a34ec40e2f5ec6b7a85bb3c71811ca6e58e2cf39775422d607aaaac9a0d298cba3ef4d057221ea2780599ffde1dd02435b100b2
+EBUILD tinyca-2.0.7.5-r2.ebuild 1637 SHA256 e8db82c00ac8a4b257528bfa96f77ec1c2978a92bbf71a69e7884953a280c276 SHA512 cf9ac744aef70598e16fdba90d080daa64671bff373256563055889b9ce78c6bf1230ddda2699b572dbd87bdd4b89ad75d4e646823006d5a303a52ab7e17a8cb WHIRLPOOL 7372898c11f474ae7aeeb6bc40f8359c373c1e669f9c23cd379bc5ae54661c01df38b335bc62822b733d738ddd5d282b900a3fbf1d53df254bc3f493d8ccc614
+MISC ChangeLog 1955 SHA256 1776ef51a831f084ca4411d7e1715132f0e851e2daa2a234c7777537e090fa00 SHA512 a3b47e0a9a1cd62a72142b5eb3cac27a279c7613a0b2ca2c42738b82accb4ab7e5454df514a4973e9942b1782e36ff268f84622c4bb3f9958374a4f2a1ee8586 WHIRLPOOL eb8ca16a403e5b89bbfac275efdfb130f8500bbb3c008748d5f9a30b13b1057d69c55148260961326f590c2b0fdf5d0455cbd6ad990e508f91eb4f33eff00f9e
 MISC metadata.xml 159 SHA256 fabd15e2740a2a68e0bda738d0cd4300b133ff11239802afe7e60aa3862c9c03 SHA512 96a1f7f082adc57e52a1a32666e1206e68f8ff03c728fdb7666ff98c255905977491fc4dfc37bc8bdf5da0eb50cdc408adec357bbd75bd980bc90659cc157194 WHIRLPOOL 82fca1c4b75b090abdb0a4233c8e49fc43535ca6e470f725c1872653ea922b6693e9646bc3ee1fd6f1293ebedad661642cec13b2817fb5315268300f7675a751
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.20 (GNU/Linux)
+Version: GnuPG v2
 
-iQIcBAEBCgAGBQJR1WgiAAoJELp701BxlEWfGg8P/A9Akd3wkynctX9Het93WzBk
-DmM9OnS8bIoCbRCJRTb81PQJoeGjVMKe7IarPMF0F2Ys+91KjBgxcIC+HBvbz0qZ
-U8+5a18po458GNA1mgJMPhgYE4w7JCJlSHfppZRoNu2+PCpIszuEfcx1wgA61Sz0
-Y9q0gyXZaHlPoKr2k3XCgGfm0VJPuiSX37rHEVSuBmgBh0Bm1Z2KfdtzhTkTAdWs
-sRHUMbHWm/f7N5Ie+IQOLeeQTlK5B3WA5LIbApw9C3I0sXR2aiJo8Cyaj+AfVrdp
-ePK2VzFylWNDtlopvChqpVZrFsg4DJ0Uoato+N2mR4qfmOtib65XqqOaSbsKAgsg
-u3jeNOYdAaoGpcQn6mbRF63hbKp9bEBmylbOY3eQB3fPhsePvKrUOkKf64q1OZzB
-YigC89ZYsRykonH2wT1mzBlvTn5DpyPl88tw+B8LK3TjlwqK73Kx9qDtPro2VE8H
-UwdXHNRd40RHJiMe/CNSnu6tfk4U51gbRBdFWIu9Jc9YeWxD0I97iZT1tnV6nazr
-vx+sFKeZWntpw6pU2JiZyi2bxxo80IWWL9Fdp6IaoL3iYoZJMzDi7Y7M1SEaEM7a
-QKG8yUGuDbQ4ijJCNPQKVsj3W1sAGc4r6PdpEXtl9PTB/rlo/FfZRDXS8mRrfvqN
-kaf8BdyptNMjc2O5JEqN
-=LLCV
+iF4EAREIAAYFAlP0GNkACgkQXYk9GL8g3FEKXwEAns3O8iLxZr9r9ciz84OQCild
+wcrmt4PGKrZqj5RWc/IBAKMJJEy8gD/C8qvGedeCxvqwQDAShdGsOD186w9QT+5J
+=bf1n
 -----END PGP SIGNATURE-----
