@@ -1,11 +1,0 @@
-DEFINED_PHASES=compile install unpack
-DEPEND=>=dev-libs/openssl-0.9.7e dev-perl/Locale-gettext >=virtual/perl-MIME-Base64-2.12 >=dev-perl/gtk2-perl-1.072 >=sys-apps/sed-4
-DESCRIPTION=Simple Perl/Tk GUI to manage a small certification authority
-HOMEPAGE=http://tinyca.sm-zone.net/
-KEYWORDS=~x86 ~sparc ~ppc ~amd64
-LICENSE=Artistic
-RDEPEND=>=dev-libs/openssl-0.9.7e dev-perl/Locale-gettext >=virtual/perl-MIME-Base64-2.12 >=dev-perl/gtk2-perl-1.072
-SLOT=0
-SRC_URI=http://tinyca.sm-zone.net/tinyca2-0.7.3.tar.bz2
-_eclasses_=eutils	06133990e861be0fe60c2b428fd025d9	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0f1760274637a138b99bb649202ea402
-_md5_=a244f6a8dec6d4a1eb656466ef0ec0ee
