@@ -1,12 +1,13 @@
-DEFINED_PHASES=compile install unpack
+DEFINED_PHASES=compile install prepare
 DEPEND=>=dev-libs/openssl-0.9.7e dev-perl/Locale-gettext >=virtual/perl-MIME-Base64-2.12 >=dev-perl/gtk2-perl-1.072 >=sys-apps/sed-4
 DESCRIPTION=Simple Perl/Tk GUI to manage a small certification authority
+EAPI=5
 HOMEPAGE=http://tinyca.sm-zone.net/
 IUSE=linguas_en linguas_de linguas_cs linguas_es linguas_sv
-KEYWORDS=amd64 ~ppc ~sparc x86
+KEYWORDS=~amd64 ~ppc ~sparc ~x86
 LICENSE=Artistic
 RDEPEND=>=dev-libs/openssl-0.9.7e dev-perl/Locale-gettext >=virtual/perl-MIME-Base64-2.12 >=dev-perl/gtk2-perl-1.072
 SLOT=0
 SRC_URI=http://tinyca.sm-zone.net/tinyca2-0.7.5.tar.bz2
 _eclasses_=eutils	06133990e861be0fe60c2b428fd025d9	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0f1760274637a138b99bb649202ea402
-_md5_=005792789dc843c1c412f65d63a8ed3e
+_md5_=db717cdb37214f2045cf623b8d23d4a1
